change of the untrue statments

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ technologies and colaborate to become &hellip;">
   <header role="banner"><hgroup>
   <h1><a href="/">Codestack</a></h1>
   
-    <h2>We are open source hacking collective</h2>
+    <h2>We are open source <STRIKE>hacking</STRIKE> collective</h2>
   
 </hgroup>
 
