--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if IEMobile 7 ]><html class="no-js iem7"><![endif]-->
 <!--[if lt IE 9]><html class="no-js lte-ie8"><![endif]-->
@@ -38,7 +37,7 @@ technologies and colaborate to become &hellip;">
   <header role="banner"><hgroup>
   <h1><a href="/">Codestack</a></h1>
   
-    <h2>We are open source <STRIKE>hacking</STRIKE> collective</h2>
+    <h2>We are open source hacking collective</h2>
   
 </hgroup>
 
